finished elden ring page, fixed overlapping borders, added a favicon, added some more "semantisch" elements

--- a/eindopdracht/style.css
+++ b/eindopdracht/style.css
@@ -18,6 +18,7 @@ main,
 #system-requirements {
   padding-left: 30px;
   display: flex;
+  border-bottom: none;
 }
 
 main {
@@ -41,6 +42,11 @@ nav {
 #links-games {
   display: flex;
   gap: 5px;
+}
+
+#links-games a:hover {
+  color: white;
+  background-color: black;
 }
 
 #links-games a {
